--- a/_output.yml
+++ b/_output.yml
@@ -1,2 +1,9 @@
+bookdown::pdf_book:
+  includes:
+    header-includes:
+    - \hypersetup{draft} # disable automatic hyperlink generation in pdf
 bookdown::gitbook:
   split_by: chapter
+  config:
+    toc:
+      collapse: section
